--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,8 @@
    "name": "ZCASH price ticker",
    "short_name": "ZCASH ticker",
    "update_url": "https://clients2.google.com/service/update2/crx",
-   "version": "0.9.1"
+   "version": "0.9.2",
+    "permissions": [
+    "https://api.coinmarketcap.com/"
+  ]
 }
